deployment-quiz-client-git.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: quiz-client-git
  managedFields:
  labels:
    app: quiz-client-git
    app.kubernetes.io/component: quiz-client-git
    app.kubernetes.io/instance: quiz-client-git
    app.kubernetes.io/name: quiz-client-git
    app.kubernetes.io/part-of: quiz-client-git-app
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 16-ubi8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quiz-client-git
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: quiz-client-git
        deployment: quiz-client-git
    spec:
      containers:
        - name: quiz-client-git
          image: >-
            image-registry.openshift-image-registry.svc:5000/pipelines-quiz-client/quiz-client-git@sha256:a963a54d67b5dcf34cede112d9ee7e1900a514442f461aa1007cb7c885425ca3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
