service-quiz-client-git.yaml
kind: Service
apiVersion: v1
metadata:
  name: quiz-client-git
  labels:
    app: quiz-client-git
    app.kubernetes.io/component: quiz-client-git
    app.kubernetes.io/instance: quiz-client-git
    app.kubernetes.io/name: quiz-client-git
    app.kubernetes.io/part-of: quiz-client-git-app
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 16-ubi8
  annotations:
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/kirannreddy/quiz-client.git'
    openshift.io/generated-by: OpenShiftWebConsole
           'f:type': {}
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: quiz-client-git
    deployment: quiz-client-git
