route-quiz-api-git-1.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: quiz-api-git-1
  labels:
    app: quiz-api-git-1
    app.kubernetes.io/component: quiz-api-git-1
    app.kubernetes.io/instance: quiz-api-git-1
    app.kubernetes.io/name: quiz-api-git-1
    app.kubernetes.io/part-of: Triggers
    app.openshift.io/runtime: dotnet
    app.openshift.io/runtime-version: 7.0-ubi8
spec:
  host: >-
    quiz-api-git-1-pipelines-quiz-api.apps.cluster-225g7.225g7.sandbox1786.opentlc.com
  to:
    kind: Service
    name: quiz-api-git-1
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status:
  ingress:
    - host: >-
        quiz-api-git-1-pipelines-quiz-api.apps.cluster-225g7.225g7.sandbox1786.opentlc.com
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2023-07-11T03:53:41Z'
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps.cluster-225g7.225g7.sandbox1786.opentlc.com
